--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.16.0",
+    "react-to-print": "^2.14.15",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
